--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@ h1 {
     color: white;
     padding: 20px;
     text-align: center;
+    font-family: 'Dancing Script', cursive;
 }
 
 img {
@@ -13,30 +14,27 @@ img {
     background-color: #51818a;
     color: white;
     line-height: 1.5;
-    margin-bottom: 30px;
     border-radius: 25px;
     padding: 20px;
+    font-family: 'ABeeZee', sans-serif;
+}
+
+#finalTotal, #randomNumber {
+    background-color: #9aa3a5;
+    color: white;
+    border-radius: 25px;
+    padding: 20px;
+    margin: 20px;
+    font-family: 'Cantarell', sans-serif;
 }
 
 #tally {
     background-color: #51818a;
     color: white;
-    margin-bottom: 30px;
     border-radius: 25px;
     padding: 20px;
-}
-
-#score {
-    background-color: #51818a;
-    color: white;
-    margin-top: 30px;
-    border-radius: 25px;
-    padding: 20px;
-}
-
-#random-number {
-    height: 130px;
-    width: 100px;
+    margin: 20px;
+    font-family: 'Cantarell', sans-serif;
 }
 
 .btn {
