--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,37 +6,56 @@ h1 {
 }
 
 img {
+    margin-top: 20px;
     height: 200px;
     width: 200px;
+    border-radius: 20px;
 }
 
-.gameInstructions {
+img:hover {
+    background-color: #024a57
+}
+
+#gameInstructions {
     background-color: #51818a;
     color: white;
-    line-height: 1.5;
-    border-radius: 25px;
+    border-radius: 20px;
     padding: 20px;
-    font-family: 'ABeeZee', sans-serif;
+    margin-bottom: 20px;
 }
+
+ul {
+    list-style-type: circle;
+    font-family: 'ABeeZee', sans-serif, 20px;
+    line-height: 1.5;
+    padding-left: 20px;
+  }
+  
 
 #finalTotal, #randomNumber {
     background-color: #9aa3a5;
     color: white;
-    border-radius: 25px;
+    border-radius: 20px;
     padding: 20px;
     margin: 20px;
-    font-family: 'Cantarell', sans-serif;
+    font-family: 'Lobster', cursive;
+
 }
 
 #tally {
     background-color: #51818a;
     color: white;
-    border-radius: 25px;
-    padding: 20px;
+    border-radius: 20px;
+    padding-right: 20px;
     margin: 20px;
-    font-family: 'Cantarell', sans-serif;
+    font-family: 'Lobster', cursive;
 }
 
-.btn {
-    align-content: center;
+#message {
+    background-color: #51818a;
+    color: white;
+    border-radius: 20px;
+    padding-right: 20px;
+    margin: 20px;
+    font-family: 'Lobster', cursive, 50px;
 }
